# American-retailers

./: README.md  pyproject.toml
docs/: conf.py  index.rst
models/forecasting/: ARIMA.joblib  XGBoost.joblib
models/predictive/: FOODS_1_df_xg_pipeline.joblib  FOODS_2_df_xg_pipeline.joblib  FOODS_3_df_xg_pipeline.joblib  HOBBIES_1_df_xg_pipeline.joblib  HOBBIES_2_df_xg_pipeline.joblib  HOUSEHOLD_1_df_xg_pipeline.joblib  HOUSEHOLD_2_df_xg_pipeline.joblib
notebooks/forecasting/: Hoang_TrungKien_14234710-SARIMA_withgridsearch.ipynb  Hoang_TrungKien_14234710-XGBoost.ipynb
notebooks/predictive/: Hoang_TrungKien_14234710-DecisionTree_deparments.ipynb  Hoang_TrungKien_14234710-XGboost_deparments.ipynb  Hoang_TrungKien_14234710-model_des.ipynb  Hoang_TrungKien_14234710_week3_adaboost-hyperparameters.ipynb
reports/: EXPERIMENT REPORT-ADV-AS2_forecasting-2.docx  EXPERIMENT REPORT-ADV-AS2_forecasting-3.docx  EXPERIMENT REPORT-ADV-AS2_forecasting.docx  EXPERIMENT REPORT-ADV-AS2_predictive-2.docx  EXPERIMENT REPORT-ADV-AS2_predictive.docx  EXPERIMENT REPORT-forecasting.docx  EXPERIMENT REPORT-predictive.docx
src/data/: sets.py
src/models/: predict_model.py
