[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = ""
authors = ["KenUTS <111736067+KenUTS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.6.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"
xgboost = "1.7.6"
statsmodels = "0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
